2008-05-11 10:52 +0200  Matthias Andree  <matthias.andree@gmx.de>  (09b0363cdf54)

	* rfc3676.c: In debug output, cast size_t arguments to long for
	consistency with printf %ld argument.

2008-05-11 00:50 -0700  Brendan Cully  <brendan@kublai.com>  (98c39c5187a9)

	* main.c: Update copyright in -vv output. Closes #3042.

2008-05-07 11:54 -0700  Brendan Cully  <brendan@kublai.com>  (385efdbf9423)

	* mutt_sasl.c, mutt_sasl.h: Make SASL support conn_poll method.
        Make SASL IP lookup failure non-fatal. Both are for tunnel support.

2008-05-05 19:32 +0200  Rocco Rutte  <pdmef@gmx.net>  (0eacf5297484)

	* mbyte.c, mbyte.h: Fix some compiler warnings if compiling without
	system wide character functions

	* mbyte.c, protos.h, utf8.c: Pass buffer size to mutt_wctoutf8()
	to prevent crashes if MB_LEN_MAX<6 as pointed out by exg on #mutt.

2008-04-29 10:44 -0700  David Champion  <dgc@uchicago.edu>  (1de934f1d618)

	* muttlib.c: [9414b9dd36db] broke softfill. (closes #3035)

2008-04-29 10:38 -0700  Wilfried Goesgens  <dothebart@uncensored.citadel.org>  (8017c8074f62)

	* imap/auth_gss.c: Print GSSAPI status messages to debug log on
	error.

2008-04-03 17:08 +0200  Miroslav Lichvar  <mlichvar@redhat.com>  (bdd44e92919d)

	* mutt_ssl_gnutls.c: Fix sending long commands when using gnutls.

2008-04-09 15:57 -0700  Dan Fandrich  <dan@coneharvesters.com>  (3b7b3c0e459e)

	* configure.ac, strtok_r.c: Replace strtok_r when it's not
	available. The implementation comes from glibc 2.6.1 (like the
	strsep replacement) and uses the same autoconf hooks.

2008-04-09 18:13 +0200  Christian Ebert  <blacktrash@gmx.net>  (ae90c8e8ea4d)

	* doc/manual.xml.head: manual.xml.head: grammar correction

2008-03-11 17:20 -0700  N.J. Mann  <njm@njm.f2s.com>  (e3bc99a4a6bd)

	* mbox.c, mh.c, pop.c: Respect ctx->quiet when initializing
	progress bar.

2008-03-09 14:01 -0700  Sébastien Hinderer  <Sebastien.Hinderer@ens-lyon.org>  (c4212a17fad6)
